2017-03-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/graphics.c (plot_border):  Range-limited y2 axis was
	drawn in the wrong direction (top-to-bottom rather than bottom-to-top).
	If the top plot border was drawn also, this resulted in a spurious
	diagonal line across the plot.
	Bug #1921

2017-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/interpol.h src/interpol.c src/plot2d.c docs/gnuplot.doc:
	Clean up code, documentation, and demos for the 'bins' option.
	- document the algorithm for choosing bins
	- binrange defaults to min/max of current data set (not axis range)
	- trap degenerate case of all points UNDEFINED
	- new option binwidth=<width>. Now you can either determine binwidth
	  from range + nbins, or nbins from range + binwidth

	* src/plot2d.c src/tables.c:  "smooth bins" is the same as "bins".

	* src/set.c (set_table):  The "set table <filename>" command was not
	doing tilde expansion on filename.

	* src/datafile.c (df_open):  If the previous plot command plotted from
	an array by name, try to retrieve that array by name for a subsequent
	plot that uses the special filename '' or "". E.g.
	    plot Array with lines, '' with impulses

	* configure.ac:  enable/disable comment for stats command was reversed

2017-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_impulses) docs/gnuplot.doc:  Apply the x offset
	created by "set jitter" to 2D plots with impulses.

2017-03-10  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Restore EXPERIMENTAL warning to documentation for
	the "bins" plotting option (it had been removed 2017-02-19).  We may 
	consider changing the interpretation of binrange [min:max] to be more
	consistent with R, so warning that "implementation details may change
	before inclusion in a stable release" is appropriate.

2017-03-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots):  Do not enforce cbrange validity if the